# multiscalemnist

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  config.yml  pyproject.toml
.github/workflows/: ci.yml
multiscalemnist/: cli.py  config.py  generate.py  mnist.py
tests/: conftest.py  test_cli.py  test_config.py  test_generate.py  test_mnist.py  test_multiscalemnist.py
