[tool.poetry]
name = "multiscalemnist"
version = "0.6.0"
description = "MNIST dataset for detection with multiple scales"
authors = ["PiotrJZielinski <piotrekzie100@gmail.com>"]
packages = [
    { include = "multiscalemnist" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
yacs = "^0.1.7"
opencv-python = "^4.2.0"
h5py = "^2.10.0"
tqdm = "^4.46.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
multiscalemnist = "multiscalemnist.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "E231"]

[tool.pytest.ini_options]
addopts = "--color=yes"
norecursedirs = "assets/*"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = "True"
